Adds main divs on html and stylesheet

--- a/index.html
+++ b/index.html
@@ -7,9 +7,30 @@
     <link href="https://fonts.googleapis.com/css?family=Advent+Pro:300,400" rel="stylesheet">
     <link rel="icon" href="assets/logoBig.png" type="image/png">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="css/bootstrap.min.css type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
   </head>
   <body>
+    <!-- home -->
+    <div id="home">
+      <div class="">
+        
+      </div>
+    </div>
+
+    <!-- about -->
+    <div id="about">
+
+    </div>
+
+    <!-- menu -->
+    <div id="menu">
+
+    </div>
+
+    <!-- contacts -->
+    <div id="contacts">
+
+    </div>
 
   </body>
 </html>
