adds background image on homepage

--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <link rel="icon" href="assets/logoBig.png" type="image/png">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- home -->
     <div id="home">
+      home
+      <!-- for the logo and tag line-->
       <div class="">
-        
+
+      </div>
+      <!-- for the offers -->
+      <div class="">
+
       </div>
     </div>
 
