adds logo and text on homepage

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <!-- home -->
     <div id="home">
       <!-- for the logo and tag line-->
-      <div class="">
-
+      <div class="logo">
+      <img class="logoBig" src="assets/logoBig.png" alt=""><br>
+      <h3>We Provide The Best Food<br> At The <strong>Right Price</strong></h3>
       </div>
       <!-- for the offers -->
       <div class="">
