adds happy, breakfast, lunch and dinner columns

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Anita's Kitchen</title>
-    <link href="https://fonts.googleapis.com/css?family=Advent+Pro:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Advent+Pro:300,300" rel="stylesheet">
     <link rel="icon" href="assets/logoBig.png" type="image/png">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -15,12 +15,26 @@
     <div id="home">
       <!-- for the logo and tag line-->
       <div class="logo">
-      <img class="logoBig" src="assets/logoBig.png" alt=""><br>
+      <img src="assets/logoBig.png" alt=""><br>
       <h3>We Provide The Best Food<br> At The <strong>Right Price</strong></h3>
       </div>
       <!-- for the offers -->
-      <div class="">
-
+      <div class="clearfix col-xs-3 col-md-3 happy">
+        <div class="col-xs-12 col-md-12 happyHour">
+          Happy Hour
+        </div>
+        <div class="col-xs-12 col-md-12 partyTime">
+          Party Time
+        </div>
+      </div>
+      <div class="clearfix col-xs-3 col-md-3 breakfast">
+        <i><h3>Breakfast</h3></i>
+      </div>
+      <div class="clearfix col-xs-3 col-md-3 lunch">
+        <i><h3>Lunch</h3></i>
+      </div>
+      <div class="clearfix col-xs-3 col-md-3 dinner">
+        <i><h3>Dinner</h3></i>
       </div>
     </div>
 
