adds happy, breakfast, lunch and dinner photos in the column and creates a hover effect

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
       </div>
       <!-- for the offers -->
       <div class="clearfix col-xs-3 col-md-3 happy">
-        <div class="col-xs-12 col-md-12 happyHour">
+        <a><div class="col-xs-12 col-md-12 offer happyHour">
           Happy Hour
-        </div>
-        <div class="col-xs-12 col-md-12 partyTime">
+        </div></a>
+        <a><div class="col-xs-12 col-md-12 offer partyTime">
           Party Time
-        </div>
+        </div></a>
       </div>
-      <div class="clearfix col-xs-3 col-md-3 breakfast">
+      <a><div class="clearfix col-xs-3 col-md-3 offer breakfast">
         <i><h3>Breakfast</h3></i>
-      </div>
-      <div class="clearfix col-xs-3 col-md-3 lunch">
+      </div></a>
+      <a><div class="clearfix col-xs-3 col-md-3 offer lunch">
         <i><h3>Lunch</h3></i>
-      </div>
-      <div class="clearfix col-xs-3 col-md-3 dinner">
+      </div></a>
+      <a><div class="clearfix col-xs-3 col-md-3 offer dinner">
         <i><h3>Dinner</h3></i>
-      </div>
+      </div></a>
     </div>
 
     <!-- about -->
