aligns happy divs and scales them to the size of the other divs in the same row

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       </div>
       <!-- for the offers -->
       <div class="clearfix col-xs-3 col-md-3 happy">
-        <a><div class="col-xs-12 col-md-12 offer happyHour">
-          Happy Hour
+        <a><div class="col-xs-12 col-md-12 happyHour">
+          <h3>Happy Hour</h3>
         </div></a>
-        <a><div class="col-xs-12 col-md-12 offer partyTime">
-          Party Time
+        <a><div class="col-xs-12 col-md-12 partyTime">
+          <h3>Party Time</h3>
         </div></a>
       </div>
       <a><div class="clearfix col-xs-3 col-md-3 offer breakfast">
