--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="assets/logoBig.png" type="image/png">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -40,6 +41,54 @@
 
     <!-- about -->
     <div id="about">
+      <div class="col-xs-12 col-md-12 wrapper">
+        <div class="col-xs-6 col-md-6 fastFoodsImage">
+          <div class="col-xs-10 col-md-10 fastFoodsFrame">
+            <img src="assets/fastFood1.jpg" alt="">
+            <img src="assets/fastFood2.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-xs-6 col-md-6 fastFoodsTextFrame">
+          <div class="col-xs-10 col-md-10 fastFoodsTxt">
+            <h3><strong>Fast Foods</strong></h3>
+            <h3>You'll love our delicious fast foods</h3><br>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+              ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+              aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+              pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+              culpa qui officia deserunt mollit anim id est laborum.</p><br>
+
+            <button type="button" name="button">VIEW GALLERY <i class="fa fa-arrow-right" aria-hidden="true fa-fl icon-color"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-12 wrapper">
+        <div class="col-xs-6 col-md-6 drinksTextFrame">
+          <div class="col-xs-10 col-md-10 drinksTxt">
+            <h3><strong>Fast Foods</strong></h3>
+            <h3>You'll love our delicious fast foods</h3><br>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+              ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+              aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+              pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+              culpa qui officia deserunt mollit anim id est laborum.</p><br>
+
+            <button type="button" name="button">VIEW GALLERY <i class="fa fa-arrow-right" aria-hidden="true fa-fl icon-color"></i></button>
+          </div>
+        </div>
+        <div class="col-xs-6 col-md-6 drinksImage">
+          <div class="col-xs-10 col-md-10 drinksFrame">
+            <img src="assets/drink1.jpg" alt="">
+            <img src="assets/drink2.jpg" alt="">
+          </div>
+        </div>
+      </div>
 
     </div>
 
