creates the contacts section and changes the rotation of core.jpg

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Anita's Kitchen</title>
     <link href="https://fonts.googleapis.com/css?family=Advent+Pro:300,300" rel="stylesheet">
-    <link rel="icon" href="assets/logoBig.png" type="image/png">
+    <link rel="icon" href="assets/footerlogos/logo_white.png" type="image/png">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
@@ -40,8 +40,7 @@
     </div>
 
     <!-- about -->
-    <div id="about">
-      <div class="col-xs-12 col-md-12 wrapper">
+      <div class="col-xs-12 col-md-12 wrapper" id="about">
         <div class="col-xs-6 col-md-6 fastFoodsImage">
           <div class="col-xs-10 col-md-10 fastFoodsFrame">
             <img src="assets/fastFood1.jpg" alt="">
@@ -90,16 +89,32 @@
         </div>
       </div>
 
-    </div>
-
     <!-- menu -->
     <div id="menu">
 
     </div>
-
     <!-- contacts -->
     <div id="contacts">
-
+      <div class="col-xs-12 col-md-12 contacts">
+        <div class="col-xs-12 col-md-12 position-subscribe">
+          <h3> <strong>Get our daily food items delivered to your email</strong></h3>
+          <input class="email" type="text" name="email" value="Your Email">
+          <button class="subscribe" type="button" name="button">Subscribe</button>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-12 col-md-12 footer">
+      <div class="col-xs-12 col-md-12 footer">
+          <h2><img src="assets/footerlogos/logo_white.png" alt="">  <strong>MENU</strong></h2>
+          <p><strong>Thats What We Are</strong></p><br>
+          <ul>
+            <li><a href="#"><img src="assets/footerlogos/facebook.png" alt=""></a></li>
+            <li><a href="#"><img src="assets/footerlogos/twitter.png" alt=""></a></li>
+            <li><a href="#"><img src="assets/footerlogos/pinterest.png" alt=""></a></li>
+          </ul>
+          <br><br>
+          <p>2016 Menu Restaurant</p>
+      </div>
     </div>
 
   </body>
