Modifications I do not recall (LOL) I just have to save

--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
     <div id="home">
       <!-- for the logo and tag line-->
       <div class="logo">
-      <img src="assets/logoBig.png" alt=""><br>
-      <h3>We Provide The Best Food<br> At The <strong>Right Price</strong></h3>
+        <img src="assets/logoBig.png" alt=""><br>
+        <h3>We Provide The Best Food<br> At The <strong>Right Price</strong></h3>
       </div>
       <!-- for the offers -->
+    </div>
+
+    <!-- about -->
+    <div id="about">
       <div class="clearfix col-xs-3 col-md-3 happy">
         <a><div class="col-xs-12 col-md-12 happyHour">
           <h3>Happy Hour</h3>
@@ -37,10 +41,8 @@
       <a><div class="clearfix col-xs-3 col-md-3 offer dinner">
         <i><h3>Dinner</h3></i>
       </div></a>
-    </div>
 
-    <!-- about -->
-      <div class="col-xs-12 col-md-12 wrapper" id="about">
+      <div class="col-xs-12 col-md-12 wrapper">
         <div class="col-xs-6 col-md-6 fastFoodsImage">
           <div class="col-xs-10 col-md-10 fastFoodsFrame">
             <img src="assets/fastFood1.jpg" alt="">
@@ -51,15 +53,13 @@
           <div class="col-xs-10 col-md-10 fastFoodsTxt">
             <h3><strong>Fast Foods</strong></h3>
             <h3>You'll love our delicious fast foods</h3><br>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
               ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               aliquip ex ea commodo consequat. Duis aute irure dolor in
               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
               pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
               culpa qui officia deserunt mollit anim id est laborum.</p><br>
-
             <button type="button" name="button">VIEW GALLERY <i class="fa fa-arrow-right" aria-hidden="true fa-fl icon-color"></i></button>
           </div>
         </div>
@@ -69,16 +69,14 @@
           <div class="col-xs-10 col-md-10 drinksTxt">
             <h3><strong>Fast Foods</strong></h3>
             <h3>You'll love our delicious fast foods</h3><br>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
               ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               aliquip ex ea commodo consequat. Duis aute irure dolor in
               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
               pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
               culpa qui officia deserunt mollit anim id est laborum.</p><br>
-
-            <button type="button" name="button">VIEW GALLERY <i class="fa fa-arrow-right" aria-hidden="true fa-fl icon-color"></i></button>
+              <button type="button" name="button">VIEW GALLERY <i class="fa fa-arrow-right" aria-hidden="true fa-fl icon-color"></i></button>
           </div>
         </div>
         <div class="col-xs-6 col-md-6 drinksImage">
@@ -88,34 +86,46 @@
           </div>
         </div>
       </div>
+    </div>
 
     <!-- menu -->
-    <div id="menu">
-
+    <div id="try">
+      <div class="menu_">
+        <ul>
+          <li class="menu">Fast Foods
+            <li class=""></li>
+            <li class=""></li>
+            <li class=""></li>
+          </li>
+          <li class="menu">Drinks</li>
+          <li class="menu">Chicken</li>
+          <li class="menu">Rice</li>
+        </ul>
+      </div>
     </div>
+
     <!-- contacts -->
     <div id="contacts">
       <div class="col-xs-12 col-md-12 contacts">
         <div class="col-xs-12 col-md-12 position-subscribe">
           <h3> <strong>Get our daily food items delivered to your email</strong></h3>
-          <input class="email" type="text" name="email" value="Your Email">
+          <input class="email" type="text" name="email" value="Your Email"  onclick='document.getElementByClass("email").innerHTML=""'>
           <button class="subscribe" type="button" name="button">Subscribe</button>
         </div>
       </div>
-    </div>
-    <div class="col-xs-12 col-md-12 footer">
-      <div class="col-xs-12 col-md-12 footer">
-          <h2><img src="assets/footerlogos/logo_white.png" alt="">  <strong>MENU</strong></h2>
-          <p><strong>Thats What We Are</strong></p><br>
-          <ul>
-            <li><a href="#"><img src="assets/footerlogos/facebook.png" alt=""></a></li>
-            <li><a href="#"><img src="assets/footerlogos/twitter.png" alt=""></a></li>
-            <li><a href="#"><img src="assets/footerlogos/pinterest.png" alt=""></a></li>
-          </ul>
-          <br><br>
-          <p>2016 Menu Restaurant</p>
       </div>
-    </div>
-
+      <div class="col-xs-12 col-md-12 footer">
+        <div class="col-xs-12 col-md-12 footer">
+            <h2><img src="assets/footerlogos/logo_white.png" alt="">  <strong>MENU</strong></h2>
+            <p><strong>Thats What We Are</strong></p><br>
+            <ul>
+              <li><a href="#"><img src="assets/footerlogos/facebook.png" alt=""></a></li>
+              <li><a href="#"><img src="assets/footerlogos/twitter.png" alt=""></a></li>
+              <li><a href="#"><img src="assets/footerlogos/pinterest.png" alt=""></a></li>
+            </ul>
+            <br><br>
+            <p>2016 Menu Restaurant</p>
+        </div>
+      </div>
   </body>
 </html>
