--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script href="js/js.js" type="text/javascript" type="text/javascript"></script>
+    <script href="js/jquery-3.2.0.min.js" rel="javascript" type="text/javascript"></script>
+    <script href="js/bootstrap.js" rel="javascript" type="text/javascript"></script>
   </head>
   <body>
     <!-- home -->
