Changes to the contacts container

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a><div class="clearfix col-xs-3 col-md-3 offer dinner">
         <i><h3>Dinner</h3></i>
       </div></a>
-
+      <div class="container">
       <div class="col-xs-12 col-md-12 wrapper">
         <div class="col-xs-6 col-md-6 fastFoodsImage">
           <div class="col-xs-10 col-md-10 fastFoodsFrame">
@@ -70,7 +70,7 @@
       <div class="col-xs-12 col-md-12 wrapper">
         <div class="col-xs-6 col-md-6 drinksTextFrame">
           <div class="col-xs-10 col-md-10 drinksTxt">
-            <h3><strong>Fast Foods</strong></h3>
+            <h3><strong>Drinks</strong></h3>
             <h3>You'll love our delicious fast foods</h3><br>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -90,20 +90,22 @@
         </div>
       </div>
     </div>
-
+    </div>
     <!-- menu -->
-    <div id="try">
-      <div class="menu_">
+    <div id="menu1">
+      <div class="thisMenu">
         <ul>
-          <li class="menu">Fast Foods
-            <li class=""></li>
-            <li class=""></li>
-            <li class=""></li>
-          </li>
+          <li class="menu">Fast Foods</li>
           <li class="menu">Drinks</li>
           <li class="menu">Chicken</li>
           <li class="menu">Rice</li>
         </ul>
+      </div>
+      <div class="well well-lg">
+        <h3>Our Happy Customers</h3>
+        <h2>George Richard</h2>
+        <p>Great food menu is awesome,there foods are not only great
+           but also in the right price.i'll highly recommend them :)</p>
       </div>
     </div>
 
@@ -111,7 +113,7 @@
     <div id="contacts">
       <div class="col-xs-12 col-md-12 contacts">
         <div class="col-xs-12 col-md-12 position-subscribe">
-          <h3> <strong>Get our daily food items delivered to your email</strong></h3>
+          <h3><strong>Get our daily food items delivered to your email</strong></h3>
           <input class="email" type="text" name="email" value="Your Email"  onclick='document.getElementByClass("email").innerHTML=""'>
           <button class="subscribe" type="button" name="button">Subscribe</button>
         </div>
