--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -82,10 +81,9 @@
               <button type="button" name="button">VIEW GALLERY <i class="fa fa-arrow-right" aria-hidden="true fa-fl icon-color"></i></button>
           </div>
         </div>
-        <div class="col-xs-6 col-md-6 drinksImage">
+        <div class="col-xs-6 col-md-6 col-lg-6 drinksImage">
           <div class="col-xs-10 col-md-10 drinksFrame">
-            <img src="assets/drink1.jpg" alt="">
-            <img src="assets/drink2.jpg" alt="">
+            <img src="assets/drink1.jpg" alt=""><img src="assets/drink2.jpg" alt="">
           </div>
         </div>
       </div>
